syntax = "proto3";

package api.kessel.inventory.v1beta1;

import public "kessel/inventory/v1beta1/resource_label.proto";

option go_package = "api/kessel/inventory/v1beta1;v1beta1";
option java_multiple_files = true;
option java_package = "api.kessel.inventory.v1beta1";

message K8sClusterDetailNodesInner {

  // The name of the node (this can contain private info)
  string name = 3373707;

  // CPU Capacity of the node defined in CPU units, e.g. \"0.5\"
  string cpu = 98728;

  // Memory Capacity of the node defined as MiB, e.g. \"50Mi\"
  string memory = 4014849;

  // Map of string keys and string values that can be used to organize and
  // categorize (scope and select) resources
  repeated ResourceLabel labels = 36675587;
}
